// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mocker mock() when example is of type INodeExternalExample generates a dynamic example 1`] = `
Object {
  "body": "test value",
  "headers": Object {
    "Content-type": "test",
  },
  "statusCode": 202,
}
`;

exports[`mocker mock() with valid negotiator response returns static example 1`] = `
Object {
  "body": "hello",
  "headers": Object {
    "Content-type": "test",
  },
  "statusCode": 202,
}
`;
